--- a/public/404.html
+++ b/public/404.html
@@ -57,8 +57,8 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 
         
 
-    <h1>Error 404</h1>
-    <p class="subtitle">Page Not Found</p>
+    <h1></h1>
+    <p class="subtitle"></p>
 
     
 
