--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 
         
 
-    <h1>Wonders of the Lands of the World</h1>
-    <p class="subtitle">Ivaela of Ithelren</p>
+    <h1></h1>
+    <p class="subtitle"></p>
 
     
 
